<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:orderInCategory="50"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />

    <item
        android:id="@+id/action_delete"
        android:orderInCategory="100"
        android:icon="@drawable/ic_delete_black_24dp"
        android:title="@string/delete_all"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_export_history"
        android:orderInCategory="200"
        android:title="@string/view_history_export"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import_history"
        android:orderInCategory="201"
        android:title="@string/view_history_import"
        app:showAsAction="never" />
</menu>
